# reamd7-swc-plugin-replace-es-lib

./: .gitignore  Cargo.toml  README.md  index.d.ts  package.json  pnpm-lock.yaml
example/: _do.ts  corejs.ts  index.ts  package.json
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
