[package]
name = "swc_plugin_replace_es_lib"
version = "1.6.0"
edition = "2021"
authors = ["fz6m"]
description = "Auto css modules plugin for swc"
license = "MIT"
repository = "https://github.com/umijs/swc-plugin-replace-es-lib.git"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde_json = "1.0.114"
replace_es_lib = { version = "1.6.0", path = "./transform" }
swc_core = { version = "10.0.1", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
] }
serde = { version = "1.0.217", features = ["derive"] }
