[package]
name = "replace_es_lib"
version = "1.6.0"
authors = ["fz6m"]
description = "Auto css modules plugin for swc"
edition = "2021"
license = "MIT"
repository = "https://github.com/umijs/swc-plugin-replace-es-lib.git"
publish = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
swc_core = { version = "22.5.2", features = [
  "ecma_visit",
  "ecma_ast",
  "common",
] }
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json = "1.0.114"
testing = "0.35.19"
